--- a/templates/recentchanges.tmpl
+++ b/templates/recentchanges.tmpl
@@ -15,8 +15,8 @@
 			<TMPL_VAR NAME="LINK"></a>
 		</TMPL_LOOP>
 		<br>
-		changed <TMPL_LOOP NAME="WHEN"> by <TMPL_LOOP NAME="USER">:
-		<i><TMPL_LOOP NAME="MESSAGE"></i>
+		changed <TMPL_VAR NAME="WHEN"> by <TMPL_VAR NAME="USER">:
+		<i><TMPL_VAR NAME="MESSAGE"></i>
 	</li>
 </TMPL_LOOP>
 </ul>
