add rev as comment to shut up html::template

--- a/templates/recentchanges.tmpl
+++ b/templates/recentchanges.tmpl
@@ -10,7 +10,7 @@
 
 <ul>
 <TMPL_LOOP NAME="CHANGELOG">
-	<li>
+	<li> <!-- <TMPL_VAR NAME="REV"> -->
 		<TMPL_LOOP NAME="PAGES">
 			<TMPL_VAR NAME="LINK"></a>
 		</TMPL_LOOP>
