- use templates for signin form, error messages - use FormBuilder for edit page forms (also use template) - print debug to stderr in cgi mode to avoid breaking http headers - fix links to page in parentlinks if $url is unset - reorganise how wikilink is used in templates - only make recentchanes link if svn is enabled - change session id cookie to something we control - add support for logging committer name for web commits from signed in   users (untested) - probably more changes I forgot

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -3,9 +3,8 @@
 <body>
 
 <h1>
-<a href="<TMPL_VAR INDEXLINK>"><TMPL_VAR WIKINAME></a>/
 <TMPL_LOOP NAME="PARENTLINKS">
-<a href="<TMPL_VAR NAME=URL>"><TMPL_VAR NAME=PAGE></a> / 
+<a href="<TMPL_VAR NAME=URL>"><TMPL_VAR NAME=PAGE></a>/ 
 </TMPL_LOOP>
 <TMPL_VAR TITLE>
 </h1>
@@ -33,6 +32,8 @@
 </TMPL_LOOP>
 </p>
 </TMPL_IF>
+
+<!-- from <TMPL_VAR NAME=WIKINAME> -->
 
 </body>
 </html>
