--- a/templates/recentchanges.tmpl
+++ b/templates/recentchanges.tmpl
@@ -3,7 +3,7 @@
 <body>
 
 <h1>
-<a href="<TMPL_VAR INDEXLINK>"><TMPL_VAR WIKINAME></a>/ <TMPL_VAR TITLE>
+<TMPL_VAR INDEXLINK>/ <TMPL_VAR TITLE>
 </h1>
 
 <hr>
