templatize commit types, so it could use icons, or whatever

--- a/templates/recentchanges.tmpl
+++ b/templates/recentchanges.tmpl
@@ -15,6 +15,7 @@
 			<TMPL_VAR NAME="LINK">
 		</TMPL_LOOP>
 		<br>
+		<!-- <TMPL_VAR NAME="COMMITTYPE"> -->
 		changed <TMPL_VAR NAME="WHEN"> by <TMPL_VAR NAME="USER">:
 		<i>
 		<TMPL_LOOP NAME="MESSAGE">
