nbsp hack to separate out the buttons a bit. should really use css for this..

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -10,15 +10,15 @@
 </h1>
 
 <TMPL_IF NAME="EDITURL">
-<a href="<TMPL_VAR EDITURL>">Edit</a>
+<a href="<TMPL_VAR EDITURL>">Edit</a>&nbsp;
 </TMPL_IF>
 
 <TMPL_IF NAME="RECENTCHANGESURL">
-<a href="<TMPL_VAR RECENTCHANGESURL>">RecentChanges</a>
+<a href="<TMPL_VAR RECENTCHANGESURL>">RecentChanges</a>&nbsp;
 </TMPL_IF>
 
 <TMPL_IF NAME="HISTORYURL">
-<a href="<TMPL_VAR HISTORYURL>">History</a>
+<a href="<TMPL_VAR HISTORYURL>">History</a>&nbsp;
 </TMPL_IF>
 
 <TMPL_VAR DISCUSSIONLINK><br>
