dd page preview

--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -17,5 +17,9 @@ Optional comment about this change:</br>
 </TMPL_IF>
 <TMPL_VAR FORM-SUBMIT>
 <TMPL_VAR FORM-END>
+<TMPL_IF NAME="PAGE_PREVIEW">
+<hr>
+<TMPL_VAR PAGE_PREVIEW>
+</TMPL_IF>
 </body>
 </html>
