add a header to page preview section

--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -19,6 +19,7 @@ Optional comment about this change:</br>
 <TMPL_VAR FORM-END>
 <TMPL_IF NAME="PAGE_PREVIEW">
 <hr>
+<h1>Page preview:</h1>
 <TMPL_VAR PAGE_PREVIEW>
 </TMPL_IF>
 </body>
