prefs page implemented

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -21,6 +21,10 @@
 <a href="<TMPL_VAR HISTORYURL>">History</a>&nbsp;
 </TMPL_IF>
 
+<TMPL_IF NAME="PREFSURL">
+<a href="<TMPL_VAR PREFSURL>">Preferences</a>&nbsp;
+</TMPL_IF>
+
 <TMPL_VAR DISCUSSIONLINK><br>
 
 <hr>
