improve description field for rss

--- a/templates/rsspage.tmpl
+++ b/templates/rsspage.tmpl
@@ -3,7 +3,7 @@
 	<channel>
 		<title><TMPL_VAR TITLE ESCAPE=HTML></title>
 		<link><TMPL_VAR PAGEURL></link>
-		<description><TMPL_VAR TITLE ESCAPE=HTML></description>
+		<description><TMPL_VAR WIKINAME ESCAPE=HTML></description>
 		<TMPL_LOOP NAME="ITEMS">
 		<item>
 			<title><TMPL_VAR ITEMTITLE ESCAPE=HTML></title>
