html validation fixes:  - escape & in urls (also clean up cgi url generation)  - since markdown wraps inlined pages in <p></p>, close and re-open    the paragraph tags when generating the embedded html  - added XHTML 1.0 doctypes to templates  - fixed <hr /> and <br /> in templates  - add an alt attribute to inline images, based on the WikiLink to the    image. Allows things like [[my_image|img.png]] to customise alt text.

--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head><title><TMPL_VAR FORM-TITLE></title></head>
 <body>
@@ -16,18 +18,18 @@ confict and commit again to save your changes.
 <TMPL_VAR FIELD-FROM>
 <TMPL_VAR FIELD-RCSINFO>
 <TMPL_IF NAME="PAGE_SELECT">
-Page location: <TMPL_VAR FIELD-PAGE><br>
+Page location: <TMPL_VAR FIELD-PAGE><br />
 <TMPL_ELSE>
 <TMPL_VAR FIELD-PAGE>
 </TMPL_IF>
-<TMPL_VAR FIELD-CONTENT><br>
+<TMPL_VAR FIELD-CONTENT><br />
 <TMPL_IF NAME="CAN_COMMIT">
-Optional comment about this change:</br>
-<TMPL_VAR FIELD-COMMENTS><br>
+Optional comment about this change:<br />
+<TMPL_VAR FIELD-COMMENTS><br />
 </TMPL_IF>
 <TMPL_VAR FORM-SUBMIT>
 <TMPL_VAR FORM-END>
-<hr>
+<hr />
 <TMPL_IF NAME="PAGE_PREVIEW">
 <h1>Page preview:</h1>
 <TMPL_VAR PAGE_PREVIEW>
