--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+ "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head><title><TMPL_VAR TITLE></title></head>
 <body>
@@ -25,11 +27,11 @@
 <a href="<TMPL_VAR PREFSURL>">Preferences</a>&nbsp;
 </TMPL_IF>
 
-<TMPL_VAR DISCUSSIONLINK><br>
+<TMPL_VAR DISCUSSIONLINK><br />
 
-<hr>
+<hr />
 <TMPL_VAR CONTENT>
-<hr>
+<hr />
 
 <TMPL_IF NAME="BACKLINKS">
 <p>Links:
