--- a/doc/style.css
+++ b/doc/style.css
@@ -39,10 +39,10 @@
 }
 
 /* Used for invalid form fields. */
-#fb_invalid {
+.fb_invalid {
 	background: red;
 }
 /* Used for required form fields. */
-#fb_required {
+.fb_required {
 	fornt-style: bold;
 }
