--- a/doc/style.css
+++ b/doc/style.css
@@ -40,7 +40,7 @@
 
 /* Used for invalid form fields. */
 .fb_invalid {
-	background: red;
+	color: red;
 }
 /* Used for required form fields. */
 .fb_required {
