--- a/doc/style.css
+++ b/doc/style.css
@@ -22,8 +22,8 @@
 /* Used for adding a blog page. */
 #blogform {
 	margin: 10 10;
-	border: 1px solid #000;
-	color:
+	border: 1px solid #aaa;
+	color: #eee;
 }
 
 #backlinks {
