--- a/doc/style.css
+++ b/doc/style.css
@@ -21,9 +21,9 @@
 
 /* Used for adding a blog page. */
 #blogform {
-	margin: 10 10;
+	margin: 10px 10px;
 	border: 1px solid #aaa;
-	color: #eee;
+	background: #eee;
 }
 
 #backlinks {
