--- a/doc/style.css
+++ b/doc/style.css
@@ -21,7 +21,7 @@
 
 /* Used for adding a blog page. */
 #blogform {
-	margin: 10px 10px;
+	padding: 10px 10px;
 	border: 1px solid #aaa;
 	background: #eee;
 }
