--- a/doc/style.css
+++ b/doc/style.css
@@ -46,3 +46,24 @@
 .fb_required {
 	fornt-style: bold;
 }
+/* RSS button. */
+.rssbutton {
+	 color: FFFFFF;
+	 background-color: FF6600;
+	 border-color: FF6600;
+	 border-style: outset;
+	 text-decoration: none !important;
+	 margin: 2em 0em 0em 0em;
+	 padding: 0em 0.5em 0em 0.5em;
+	 border-width: 2; color: FFFFFF;
+	 background-color: FF6600;
+	 border-color: FF6600;
+	 border-style: outset;
+	 text-decoration: none !important;
+	 margin: 2em 0em 0em 0em;
+	 padding: 0em 0.5em 0em 0.5em;
+	 border-width: 2;
+}
+.rssbutton:active {
+	border-style: inset !important;
+}
