--- a/templates/blogpost.tmpl
+++ b/templates/blogpost.tmpl
@@ -1,9 +1,9 @@
-<hr />
-<form action="<TMPL_VAR CGIURL>" method="GET">
-<input type="hidden" name="do" value="blog">
-<input type="hidden" name="from" value="<TMPL_VAR ROOTPAGE>">
-<input type="hidden" name="subpage" value="1">
-Add a new post titled: <input name=title size=40>
-<input type="submit" value="Edit">
+<form action="<TMPL_VAR CGIURL>" method="get">
+<div id="blogform">
+<input type="hidden" name="do" value="blog" />
+<input type="hidden" name="from" value="<TMPL_VAR ROOTPAGE>" />
+<input type="hidden" name="subpage" value="1" />
+Add a new post titled: <input name="title" size="40" />
+<input type="submit" value="Edit" />
+</div>
 </form>
-<hr />
