--- a/templates/misc.tmpl
+++ b/templates/misc.tmpl
@@ -8,13 +8,19 @@
 </head>
 <body>
 
+<div id="header">
 <h1>
 <TMPL_VAR INDEXLINK>/ <TMPL_VAR TITLE>
 </h1>
+</div>
 
+<div id="content">
 <TMPL_VAR PAGEBODY>
+</div>
 
+<div id="footer">
 <!-- from <TMPL_VAR NAME=WIKINAME> -->
+</div>
 
 </body>
 </html>
