--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -15,6 +15,13 @@
 </TMPL_LOOP>
 <TMPL_VAR TITLE>
 </h1>
+<TMPL_IF NAME="HYPERESTRAIERURL">
+<form method="get" action="<TMPL_VAR HYPERESTRAIERURL>" id="searchform">
+<input type="text" name="phrase" value="" size="32" />
+<input type="submit" value="Search" />
+<input type="hidden" name="enc" value="UTF-8" />
+<input type="hidden" name="do" value="hyperestraier" />
+</TMPL_IF>
 </div>
 
 <div id="actions">
@@ -36,6 +43,7 @@
 </TMPL_IF>
 
 <li><TMPL_VAR DISCUSSIONLINK><br /></li>
+
 </ul>
 </div>
 
