Convert postprocessordirectives into preprocessordirectives, so they are expanded before markdown. Consequences:
 - No need to worry about markdown messing with parameters of
   preprocessordirectives. (If you had to escape stuff in one before, you'll
   need to undo that escaping now.)
 - No need for ugly </p> hacks before inlined subpages. Instead, subpages
   are wrapped in a <div>, and this prevents markdown from touching them.
   (This can also be used to add style to subpages.)
 - rss generation is less of a hack.

--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -1,3 +1,4 @@
+<div class="inlinepage">
 <h1><TMPL_VAR PAGELINK></h1>
 
 <TMPL_VAR CONTENT>
@@ -5,3 +6,4 @@
 <p>
 <i>(posted <TMPL_VAR CTIME>)</i>
 </p>
+</div>
