add basic borders around blog posts
not sure I'm 100% happy with this look, but it's better than naught

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -31,6 +31,11 @@
 	color: black !important;
 }
 
+.inlinepage {
+	padding: 10px 10px;
+	border: 1px solid #aaa;
+}
+
 #backlinks {
 	margin: 1em 0;
 }
