--- a/templates/notifymail.tmpl
+++ b/templates/notifymail.tmpl
@@ -1,5 +1,5 @@
-The following change has been made to <TMPL_VAR WIKINAME>
+The following change was made to <TMPL_VAR WIKINAME>
 by <TMPL_VAR USER>:
-<TMPL_VAR MESSAGE>
 
+<TMPL_VAR MESSAGE>
 <TMPL_VAR DIFF>
