--- a/templates/blogpost.tmpl
+++ b/templates/blogpost.tmpl
@@ -1,5 +1,8 @@
 <form action="<TMPL_VAR CGIURL>" method="get">
 <div id="blogform">
+<TMPL_IF NAME="RSSURL">
+<a class="rssbutton" type="application/rss+xml" href="<TMPL_VAR NAME=RSSURL>">RSS</a>
+</TMPL_IF>
 <input type="hidden" name="do" value="blog" />
 <input type="hidden" name="from" value="<TMPL_VAR ROOTPAGE>" />
 <input type="hidden" name="subpage" value="1" />
