rather a lot of changes to make hyperestraier search be a plugin, allowing for other types of search engine plugins if wanted, and also opening up a lot of new possibilities for other kinds of plugins later
some notable changes along the way:

- lots of new hook types: cgi, render, delete
- wrapper files fixed to support config strings with newlines in them
- HEADERCONTENT in page template useful for plugins. Probably needs to be
  expanded to more such for other places plugins might want to add content.
- remove unnecessary wrappers field from config info stored in wrappers

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -15,15 +15,7 @@
 </TMPL_LOOP>
 <TMPL_VAR TITLE>
 </h1>
-<TMPL_IF NAME="HYPERESTRAIERURL">
-<form method="get" action="<TMPL_VAR HYPERESTRAIERURL>" id="searchform">
-<div>
-<input type="text" name="phrase" value="" size="16" />
-<input type="hidden" name="enc" value="UTF-8" />
-<input type="hidden" name="do" value="hyperestraier" />
-</div>
-</form>
-</TMPL_IF>
+<TMPL_VAR HEADERCONTENT>
 </div>
 
 <div id="actions">
