--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -36,7 +36,9 @@
 <li><a href="<TMPL_VAR PREFSURL>">Preferences</a></li>
 </TMPL_IF>
 
+<TMPL_IF NAME="DISCUSSIONLINK">
 <li><TMPL_VAR DISCUSSIONLINK><br /></li>
+</TMPL_IF>
 
 </ul>
 </div>
