* The page name and parent links has switched from using a <h1> to a styled   <span>, so pages can use <h1> internally instead of needing to use <h2>. * Updated all of ikiwiki's own wiki pages for that. * Add pagetemplate hook, which can be used by plugins that want to mess   around with adding new stuff to the page template. * Remove headercontent; the search plugin now adds the search box to the   header by registering a pagetemplate hook, and other plugins should do   similarly.

--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -20,7 +20,9 @@ confict and commit again to save your changes.
 </p>
 </TMPL_IF>
 <TMPL_VAR FORM-START>
-<h1><TMPL_VAR INDEXLINK>/ <TMPL_VAR FORM-TITLE></h1>
+<div id="header">
+<span><TMPL_VAR INDEXLINK>/ <TMPL_VAR FORM-TITLE></span>
+</div>
 <TMPL_VAR FIELD-DO>
 <TMPL_VAR FIELD-FROM>
 <TMPL_VAR FIELD-RCSINFO>
@@ -39,7 +41,7 @@ Optional comment about this change:<br />
 <hr />
 <TMPL_IF NAME="PAGE_PREVIEW">
 <div id="header">
-<h1>Page preview:</h1>
+<span>Page preview:</span>
 </div>
 <div id="content">
 <TMPL_VAR PAGE_PREVIEW>
