header can appear more than one time, so is a class, not an id

--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -20,7 +20,7 @@ confict and commit again to save your changes.
 </p>
 </TMPL_IF>
 <TMPL_VAR FORM-START>
-<div id="header">
+<div class="header">
 <span><TMPL_VAR INDEXLINK>/ <TMPL_VAR FORM-TITLE></span>
 </div>
 <TMPL_VAR FIELD-DO>
@@ -40,7 +40,7 @@ Optional comment about this change:<br />
 <TMPL_VAR FORM-END>
 <hr />
 <TMPL_IF NAME="PAGE_PREVIEW">
-<div id="header">
+<div class="header">
 <span>Page preview:</span>
 </div>
 <div id="content">
