--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -1,5 +1,5 @@
 <div class="inlinepage">
-<span id="header"><TMPL_VAR PAGELINK></span>
+<span class="header"><TMPL_VAR PAGELINK></span>
 
 <TMPL_VAR CONTENT>
 
