--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div id="header">
+<div class="header">
 <span>
 <TMPL_LOOP NAME="PARENTLINKS">
 <a href="<TMPL_VAR NAME=URL>"><TMPL_VAR NAME=PAGE></a>/ 
@@ -41,7 +41,6 @@
 <TMPL_IF NAME="DISCUSSIONLINK">
 <li><TMPL_VAR DISCUSSIONLINK><br /></li>
 </TMPL_IF>
-
 </ul>
 </div>
 
