Make page edit textarea resize to fit browser window.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -26,6 +26,10 @@
 	border-bottom: 1px solid #000;
 }
 
+#content textarea {
+	width: 100%;
+}      
+
 /* Used for adding a blog page. */
 #blogform {
 	padding: 10px 10px;
