--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -5,6 +5,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title><TMPL_VAR TITLE></title>
 <link rel="stylesheet" href="<TMPL_VAR STYLEURL>" type="text/css" />
+<TMPL_IF NAME="META">
+<TMPL_VAR META>
+</TMPL_IF>
 </head>
 <body>
 
