* Make RecentChanges use a table and some CSS, should be much more readable.   No code changes involved. * Encode & in diffurl in examples, to conform to pedantic rules.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -30,6 +30,15 @@
 	width: 100%;
 }      
 
+/* Stuff for the RecentChanges table. */
+.changeheader {
+	background: #eee;
+	color: black !important;
+}
+.changetime {
+	white-space: nowrap;
+}
+
 /* Used for adding a blog page. */
 #blogform {
 	padding: 10px 10px;
