some stylesheet improvements for the table, also add a bit more border between items to avoid them running together in some cases

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -31,12 +31,26 @@
 }      
 
 /* Stuff for the RecentChanges table. */
-.changeheader {
+tr.changeheader {
 	background: #eee;
 	color: black !important;
 }
-.changetime {
+tr.changeinfo {
+	background: #eee;
+	color: black !important;
+}
+th.changeheader {
+	padding: 1px .3em;
+}
+td.changeinfo { 
+	padding: 1px .3em;
+}
+td.changetime {
 	white-space: nowrap;
+	padding: 1px .3em;
+}
+td.changelog {
+	font-style: italic;
 }
 
 /* Used for adding a blog page. */
