--- a/templates/recentchanges.tmpl
+++ b/templates/recentchanges.tmpl
@@ -22,18 +22,18 @@
 <table border="1" frame="border" rules="groups">
 <thead>
 	<tr class="changeheader">
-		<th align="left">user</th>
-		<th align="left">time</th>
-		<th align="left" colspan="2">changes</th>
+		<th class="changeheader" align="left">user</th>
+		<th class="changeheader" align="left">time</th>
+		<th class="changeheader" align="left" colspan="2">changes</th>
 	</tr>
 </thead>
 <tbody>
 <TMPL_LOOP NAME="CHANGELOG">
 	<!-- <TMPL_VAR NAME="REV"> -->
-	<tr class="changeheader">
-		<td><TMPL_VAR NAME="USER"></td>
+	<tr class="changeinfo">
+		<td class="changeinfo"><TMPL_VAR NAME="USER"></td>
 		<td class="changetime"><TMPL_VAR NAME="WHEN"></td>
-		<td>
+		<td class="changeinfo">
 		<TMPL_LOOP NAME="PAGES">
 			<TMPL_IF NAME="DIFFURL">
 				<a href="<TMPL_VAR NAME="DIFFURL">">
@@ -45,17 +45,15 @@
 			</TMPL_IF>
 		</TMPL_LOOP>
 		</td>
-		<td><TMPL_VAR NAME="COMMITTYPE"></td>
+		<td class="changeinfo"><TMPL_VAR NAME="COMMITTYPE"></td>
 	</tr>
 	<tr>
-		<td colspan="4">
-			<i>
+		<td class="changelog" colspan="4">
 			<TMPL_LOOP NAME="MESSAGE">
 				<TMPL_IF NAME="LINE">
 					<TMPL_VAR NAME="LINE"><br />
 				</TMPL_IF>
 			</TMPL_LOOP>
-			</i>
 		</td>
 	</tr>
 </TMPL_LOOP>
