- Adds a tag plugin that allows more easily tagging pages.     The meta plugin can also still be used for that, but the tag plugin     also lists a page's tags at the bottom of the page.   - Allows preprocessor directives to have parameters with no specified     value.   - Fixes preprocessor directive parameter parsing so that     foo=bar baz now means "foo=bar" and a "baz" with no value. * Run pagetemplate hooks when inlining pages so that inlines pages also   list their tags. * Make all plugins with pagetemplate hooks check that variables exist   on the template before setting them.

--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -4,6 +4,9 @@
 <TMPL_VAR CONTENT>
 
 <p>
-<i>(posted <TMPL_VAR CTIME>)</i>
+<i>
+Posted <TMPL_VAR CTIME>
+<TMPL_IF NAME="TAGS">Tags: <TMPL_VAR TAGS></TMPL_IF>
+</i>
 </p>
 </div>
