--- a/templates/inlinepagetitle.tmpl
+++ b/templates/inlinepagetitle.tmpl
@@ -1,4 +1,7 @@
 <p>
 <TMPL_VAR PAGELINK><br />
-<i>(posted <TMPL_VAR CTIME>)</i>
+<i>
+Posted <TMPL_VAR CTIME>
+<!-- <TMPL_IF NAME="TAGS"><TMPL_VAR TAGS></TMPL_IF> -->
+</i>
 </p>
