--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -62,6 +62,7 @@ Links:
 <span id="pageinfo">
 <!-- from <TMPL_VAR NAME=WIKINAME> -->
 Last edited <TMPL_VAR NAME=MTIME>
+<TMPL_IF NAME="TAGS">Tags: <TMPL_VAR TAGS></TMPL_IF>
 </span>
 </div>
 
