* New pagestats plugin from Enrico, which can generate a table counting   the backlinks for each page, or a del.icio.us style cloud.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -108,3 +108,15 @@ td.changelog {
 	color: white !important;
 	background: #ff9900;
 }
+
+/* Tag cloud. */
+.pagecloud {
+	float: right;
+	width: 30%;
+	text-align: center;
+}
+.smallestPC { font-size: 70%; }
+.smallPC { font-size: 85%; }
+.normalPC { font-size: 100%; }
+.bigPC { font-size: 115%; }
+.biggestPC { font-size: 130%; }
