fixes, and make dir optional

--- a/templates/aggregatepost.tmpl
+++ b/templates/aggregatepost.tmpl
@@ -9,5 +9,5 @@ From <a href="<TMPL_VAR URL>"><TMPL_VAR NAME></a>
 </i>
 </p>
 <TMPL_LOOP NAME="TAGS">
-[[<TMPL_VAR TAG>]]
+[[tag <TMPL_VAR TAG>]]
 </TMPL_LOOP>
