--- a/templates/aggregatepost.tmpl
+++ b/templates/aggregatepost.tmpl
@@ -10,3 +10,6 @@ From <a href="<TMPL_VAR URL>"><TMPL_VAR NAME></a>
 <TMPL_LOOP NAME="TAGS">
 [[tag <TMPL_VAR TAG>]]
 </TMPL_LOOP>
+<TMPL_IF NAME="TITLE">
+[[meta title="<TMPL_VAR NAME="TITLE" ESCAPE=HTML>"]]
+</TMPL_IF>
