* Title metadata of inlined pages now shows up in blogs, although not yet   in their rss feeds.

--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -1,5 +1,5 @@
 <div class="inlinepage">
-<span class="header"><TMPL_VAR PAGELINK></span>
+<span class="header"><a href="<TMPL_VAR PAGEURL>"><TMPL_VAR TITLE></a></span>
 
 <TMPL_VAR CONTENT>
 
