* Make aggregator save permalinks and author name to pages as metadata. * Add permalink and author support to meta plugin, affecting RSS feeds   and blog pages. * Change titlepage() to encode utf-8 alnum characters. This is necessary   to avoid UTF-8 creeping into filenames in urls. (There are still   some other ways that it can get in.)

--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -5,6 +5,12 @@
 
 <span class="pageinfo">
 Posted <TMPL_VAR CTIME>
+<TMPL_IF NAME="AUTHOR">
+by <TMPL_VAR NAME=AUTHOR>
+</TMPL_IF>
+<TMPL_IF NAME="PERMALINK">
+(<a href="<TMPL_VAR NAME=PERMALINK>">permalink</a>)
+</TMPL_IF>
 </span>
 
 <span class="tags">
