--- a/templates/aggregatepost.tmpl
+++ b/templates/aggregatepost.tmpl
@@ -1,15 +1,12 @@
 <TMPL_VAR CONTENT>
-<p>
-<i>
-From <a href="<TMPL_VAR URL>"><TMPL_VAR NAME></a>
-<TMPL_IF NAME="LINK">
-; <a href="<TMPL_VAR LINK>">permalink</a>
-</TMPL_IF>
-</i>
-</p>
+<br/>
 <TMPL_LOOP NAME="TAGS">
 [[tag <TMPL_VAR TAG>]]
 </TMPL_LOOP>
 <TMPL_IF NAME="TITLE">
 [[meta title="<TMPL_VAR NAME="TITLE" ESCAPE=HTML>"]]
 </TMPL_IF>
+<TMPL_IF NAME="PERMALINK">
+[[meta permalink="<TMPL_VAR NAME="PERMALINK" ESCAPE=HTML>"]]
+</TMPL_IF>
+[[meta author="<TMPL_VAR NAME="NAME" ESCAPE=HTML>"]]
