--- a/templates/rsspage.tmpl
+++ b/templates/rsspage.tmpl
@@ -1,5 +1,6 @@
 <?xml version="1.0"?>
-<rss version="2.0">
+<rss version="2.0"
+	xmlns:dc="http://purl.org/dc/elements/1.1/">
 <channel>
 <title><TMPL_VAR TITLE ESCAPE=HTML></title>
 <link><TMPL_VAR PAGEURL></link>
