* Various CSS and formatting changes.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -5,6 +5,13 @@
 	line-height: 1em;
 }
 
+.author {
+	margin: 0;
+	font-size: 18px;
+	font-weight: bold;
+	display: block;
+}
+
 #actions ul {
 	margin: 0;
 	padding: 6px;
@@ -76,6 +83,7 @@ td.changelog {
 
 .pageinfo {
 	font-style: italic;
+	display: block;
 }
 
 /* Used for invalid form fields. */
