--- a/templates/aggregatepost.tmpl
+++ b/templates/aggregatepost.tmpl
@@ -1,5 +1,4 @@
 <TMPL_VAR CONTENT>
-<br/>
 <TMPL_LOOP NAME="TAGS">
 [[tag <TMPL_VAR TAG>]]
 </TMPL_LOOP>
@@ -10,3 +9,4 @@
 [[meta permalink="<TMPL_VAR NAME="PERMALINK" ESCAPE=HTML>"]]
 </TMPL_IF>
 [[meta author="<TMPL_VAR NAME="NAME" ESCAPE=HTML>"]]
+[[meta authorurl="<TMPL_VAR NAME="URL" ESCAPE=HTML>>"]]
