--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -1,13 +1,20 @@
 <div class="inlinepage">
-<span class="header"><a href="<TMPL_VAR PAGEURL>"><TMPL_VAR TITLE></a></span>
-
+<TMPL_IF NAME="AUTHOR">
+<span class="author">
+<TMPL_IF NAME="AUTHORURL">
+<a href="<TMPL_VAR NAME=AUTHORURL>"><TMPL_VAR NAME=AUTHOR></a>
+<TMPL_ELSE>
+<TMPL_VAR NAME=AUTHOR>
+</TMPL_IF>
+</span>
+</TMPL_IF>
+<span class="header">
+<a href="<TMPL_VAR PAGEURL>"><TMPL_VAR TITLE></a>
+</span>
 <TMPL_VAR CONTENT>
 
 <span class="pageinfo">
 Posted <TMPL_VAR CTIME>
-<TMPL_IF NAME="AUTHOR">
-by <TMPL_VAR NAME=AUTHOR>
-</TMPL_IF>
 <TMPL_IF NAME="PERMALINK">
 (<a href="<TMPL_VAR NAME=PERMALINK>">permalink</a>)
 </TMPL_IF>
