--- a/templates/aggregatepost.tmpl
+++ b/templates/aggregatepost.tmpl
@@ -9,4 +9,4 @@
 [[meta permalink="<TMPL_VAR NAME="PERMALINK" ESCAPE=HTML>"]]
 </TMPL_IF>
 [[meta author="<TMPL_VAR NAME="NAME" ESCAPE=HTML>"]]
-[[meta authorurl="<TMPL_VAR NAME="URL" ESCAPE=HTML>>"]]
+[[meta authorurl="<TMPL_VAR NAME="URL" ESCAPE=HTML>"]]
