use rel=bookmark here too..

--- a/templates/inlinepage.tmpl
+++ b/templates/inlinepage.tmpl
@@ -16,7 +16,7 @@
 <span class="pageinfo">
 Posted <TMPL_VAR CTIME>
 <TMPL_IF NAME="PERMALINK">
-(<a href="<TMPL_VAR NAME=PERMALINK>">permalink</a>)
+(<a rel="bookmark" href="<TMPL_VAR NAME=PERMALINK>">permalink</a>)
 </TMPL_IF>
 </span>
 
