* Add a tail fin^W^Wsidebar plugin by Tuomo Valkonen. * If a page links to itself, mark up the link text in a span with   class="selflink" so that it can be styled. I don't have a useful style   defined for that though.

--- a/templates/page.tmpl
+++ b/templates/page.tmpl
@@ -45,6 +45,12 @@
 </div>
 </TMPL_IF>
 
+<TMPL_IF SIDEBAR>
+<div id="sidebar">
+<TMPL_VAR SIDEBAR>
+</div>
+</TMPL_IF>
+
 <div id="content">
 <TMPL_VAR CONTENT>
 </div>
