--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -129,3 +129,12 @@ td.changelog {
 .normalPC { font-size: 100%; }
 .bigPC { font-size: 115%; }
 .biggestPC { font-size: 130%; }
+
+#sidebar {
+	line-height: 3ex;
+	width: 20ex;
+	float: right;
+	margin-left: 40px;
+	margin-bottom: 40px;
+	padding: 2ex 2ex;
+}
