add styling for outline lists

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -138,3 +138,29 @@ td.changelog {
 	margin-bottom: 40px;
 	padding: 2ex 2ex;
 }
+
+/* outlines  */
+li.L1 {
+	list-style: upper-roman;
+}
+li.L2 {
+	list-style: decimal;
+}
+li.L3 {
+	list-style: lower-alpha;
+}
+li.L4 {
+	list-style: disc;
+}
+li.L5 {
+	list-style: square;
+}
+li.L6 {
+	list-style: circle;
+}
+li.L7 {
+	list-style: lower-roman;
+}
+li.L8 {
+	list-style: upper-alpha;
+}
