* Fixed a bug with previews of subpages having broken links to top-level   pages. * Change how the stylesheet url is determined in the templates: Remove   STYLEURL and add BASEURL to all templates (some already had it). This   new more general variable can be used to link to other things (eg, images)   from the template, as well as stylesheets.

--- a/templates/editpage.tmpl
+++ b/templates/editpage.tmpl
@@ -2,12 +2,10 @@
  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
-<TMPL_IF NAME="BASEURL">
 <base href="<TMPL_VAR BASEURL>" />
-</TMPL_IF>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title><TMPL_VAR FORM-TITLE></title>
-<link rel="stylesheet" href="<TMPL_VAR STYLEURL>" type="text/css" />
+<link rel="stylesheet" href="<TMPL_VAR BASEURL>style.css" type="text/css" />
 </head>
 <body>
 <TMPL_IF NAME="PAGE_CONFLICT">
