* Allow preprocessor directives to contain python-like triple-quoted   text blocks, for easy nesting of quotes inside. * Add a template plugin. * Use the template plugin to add infoboxes to each plugin page listing basic   info about the plugin.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -139,6 +139,15 @@ td.changelog {
 	padding: 2ex 2ex;
 }
 
+.infobox {
+	float: right;
+	margin-left: 2ex;
+	margin-top: 1ex;
+	margin-bottom: 1ex;
+	padding: 2ex 2ex;
+	border: 1px solid #aaa;
+}
+
 /* outlines  */
 li.L1 {
 	list-style: upper-roman;
