some fixes for note layout

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -148,6 +148,16 @@ td.changelog {
 	border: 1px solid #aaa;
 }
 
+.notebox {
+	float: right;
+	margin-left: 2ex;
+	margin-top: 1ex;
+	margin-bottom: 1ex;
+	padding: 2ex 2ex;
+	border: 1px solid #aaa;
+	width: 25%
+}
+
 /* outlines  */
 li.L1 {
 	list-style: upper-roman;
