* Make all pages pull in a local.css style sheet, if present. This won't   be included in ikiwiki, but can be created to make local styling changes   w/o needing to merge in every new change to the distributed style.css.

--- a/basewiki/style.css
+++ b/basewiki/style.css
@@ -1,3 +1,9 @@
+/* ikiwiki style sheet */
+
+/* Note that instead of modifying this style sheet, you can instead create
+ * a local.css in your wiki, and override or change settings in this one.
+ */
+
 .header {
 	margin: 0;
 	font-size: 22px;
