* Patch from James Westby to allow a description to be set for rss feeds.

--- a/templates/rsspage.tmpl
+++ b/templates/rsspage.tmpl
@@ -4,7 +4,7 @@
 <channel>
 <title><TMPL_VAR TITLE ESCAPE=HTML></title>
 <link><TMPL_VAR PAGEURL></link>
-<description><TMPL_VAR WIKINAME ESCAPE=HTML></description>
+<description><TMPL_VAR RSSDESC ESCAPE=HTML></description>
 <TMPL_VAR CONTENT>
 </channel>
 </rss>
